# TrendRadar

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 2025_01_02_001_initial_multiuser_schema.py  2025_01_02_002_add_superuser_and_password_fields.py
docs/: cloud-database-setup.md  database-init-guide.md  deployment-guide.md  oauth-setup-guide.md
docs/plans/: 2025-01-02-auth-and-admin-feature-design.md  2025-01-02-multiuser-implementation.md  2025-01-02-multiuser-system-design.md
scripts/: __init__.py  db_init.py  init_database.py  init_db.bat  init_db.sh  init_schema.sql  update_superadmin_email.py
trendradar/core/: database_config.py
trendradar/models/: __init__.py  base.py  channel.py  keyword.py  user.py
trendradar/notification/: quota.py
trendradar/web/: __init__.py  app.py
trendradar/web/auth/: __init__.py  config.py  dependencies.py  utils.py
trendradar/web/routers/: admin.py  auth.py
trendradar/web/templates/: dashboard.html  login.html
