[project]
name = "trendradar"
version = "4.6.0"
description = "TrendRadar - 热点新闻聚合与分析工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "pytz>=2025.2,<2026.0",
    "PyYAML>=6.0.3,<7.0.0",
    "fastmcp>=2.12.0,<2.14.0",
    "websockets>=15.0,<16.0",
    "feedparser>=6.0.0,<7.0.0",
    "boto3>=1.35.0,<2.0.0",
    # 新增 Web 框架和数据库依赖
    "fastapi>=0.104.0,<0.110.0",
    "uvicorn[standard]>=0.24.0,<0.30.0",
    "sqlalchemy>=2.0.0,<2.1.0",
    "alembic>=1.12.0,<1.14.0",
    "psycopg2-binary>=2.9.0,<2.10.0",
    # 认证相关
    "authlib>=1.5.0,<2.0.0",
    "requests-oauthlib>=1.3.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.0,<2.0.0",
    # 前端模板
    "jinja2>=3.1.0,<3.2.0",
    "python-multipart>=0.0.6,<0.1.0",
]

[project.scripts]
trendradar = "trendradar.__main__:main"
trendradar-mcp = "mcp_server.server:run_server"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trendradar", "mcp_server"]
